# neuron-activation-analysis

./: .gitignore  .gitmodules  Cargo.toml  paper.tex
analysis/: Cargo.toml
analysis/src/: anova.rs  bonferroni.rs  bootstrap.rs  contrastive.rs  lib.rs  permutation.rs  report.rs
analysis_scripts/: analyse.py  cross_model_triangulation.py  extended_analysis.py  fetch_corpus.py  fetch_hf_datasets.py  fetch_proper_datasets.py  run_extension_sweeps.py  temporal_and_multilingual.py
experiments/: Cargo.toml
experiments/corpus/: stimuli.json  stimuli_boost.json  stimuli_combined.json  stimuli_fetched.json  stimuli_llama_subset.json  stimuli_master.json  stimuli_proper.json  stimuli_social_spatial.json  stimuli_spatial_extra.json
experiments/mock_server/: Cargo.toml
experiments/mock_server/src/: main.rs
experiments/src/: clustering.rs  content_type.rs  dct.rs  extractor.rs  fep.rs  fingerprint.rs  gwt.rs  iit.rs  lib.rs  mock_model.rs  model.rs  pca.rs  stimulus.rs  synthetic.rs  tensor.rs  theory_report.rs
experiments/sweep/: Cargo.toml
experiments/sweep/src/: main.rs
paper/: generate_extended_figures.py  generate_fig14.py  generate_fig15.py  generate_figures.py  main.html  main.md  main.tex
results/: .gitignore  analysis_report.md  region_heatmap.json  sweep_ranked.csv
results/cross_model/: bert_embeddings.json  rdm_analysis.json  seqlen_16_results.json  seqlen_4_results.json  seqlen_stability.json
runner/: Cargo.toml
scripts/: download_weights.sh  start_tribe_cpu.py
viz/builder/: Cargo.toml
viz/builder/src/: export.rs  main.rs
(+26 files in other folders)
