[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
linfa = "0.7"
linfa-clustering = "0.7"
linfa-reduction = "0.7"
serde = { version = "1", features = ["derive"] }
bincode = "1"
rayon = "1"
rand = { version = "0.8", features = ["small_rng"] }
rand_xoshiro = "0.6"

[dev-dependencies]
approx = "0.5"
serde_json = "1"
