[package]
name = "viz_builder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "viz_builder"
path = "src/main.rs"

[dependencies]
experiments = { path = "../../experiments" }
analysis = { path = "../../analysis" }
ndarray = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
flate2 = "1"
